edited config file

--- a/_posts/2020-02-17 Week 1.md
+++ b/_posts/2020-02-17 Week 1.md
@@ -4,7 +4,9 @@ title: Week 1: Everything Has Beauty
 category: [short story]
 tags: [short story]
 ---
-<a href="pdfs/Year 1/Week 1_Everything Has Beauty.pdf" class="image fit"><img src="images/marr_pic.jpg" alt=""></a>
+<a href="pdfs/Year 1/Week 1_Everything Has Beauty.pdf" class="image fit"></a>
+	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
+
 Everything has beauty, but not everyone can see.
 
 From the small blade of grass to the perfect lives reflected in water, that are easily
