still figuring out posts

--- a/_posts/2020-02-17 Week 1.md
+++ b/_posts/2020-02-17 Week 1.md
@@ -4,8 +4,12 @@ title: Week 1: Everything Has Beauty
 category: [short story]
 tags: [short story]
 ---
-<a href="pdfs/Year 1/Week 1_Everything Has Beauty.pdf" class="image fit"></a>
-	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
+<a href="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing">Everything Has Beauty.pdf </a>	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
+
+<iframe
+src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing&embedded=true"
+style="width:718px; height:700px;" frameborder="0"></iframe>
+
 
 Everything has beauty, but not everyone can see.
 
