editing subscribe colors

--- a/_posts/2020-02-24-Week-2.md
+++ b/_posts/2020-02-24-Week-2.md
@@ -5,8 +5,9 @@ author: Mohammad Khan
 category: [short story]
 tags: [short story]
 ---
-<a href="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing">The Speech.pdf </a>	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
-
+<a href="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing">
+The Speech.pdf </a>	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
+<br>
 <iframe
 src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing&embedded=true"
 style="width:718px; height:700px;" frameborder="0"></iframe>
