added pdf download links

--- a/_posts/2020-02-24-Week-2.md
+++ b/_posts/2020-02-24-Week-2.md
@@ -7,60 +7,10 @@ tags: [short story]
 ---
 <a href="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing">
 The Speech.pdf </a>	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
+
+<p>An influential person overcomes a stutter in dire times.</p>
 <br>
 <iframe
 src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing&embedded=true"
 style="width:718px; height:700px;" frameborder="0"></iframe>
 <br>
-
-I stood in front of a crowd of thousands. The microphone inches from my face. The
-paper I held in my hands folded over easily from the slightest breeze. It has the same
-confidence I have in myself. I begin the speech.
-“M-my- fff-fr”
-
-As my condition become apparent to the crowd of strangers and a nuisance to those who know me, the internal monologue begins. Many don’t realize how vital the skill of proper speech because most have it. Many don’t see the pain and suffering of having words lodged in your throat, paralyzing your vocal cords. The gagging sounds originating from your mouth embarrasses the crowd. You read their faces. Their indignant faces. Your throat tightens. Your breath shortens. You feel frozen in time while the world rushes by you.
-
-“and III-I”
-
-The stutter persists. Not only persists but also travels into the microphone. THe
-stutter echoes throughout the room and hits you with your own failures. Each echo
-amplifies upon each other.
-
-The crowd, exasperated, waiting for you to “spit it out”. You look away from the crowd
-and the microphone to conquer the stammer, and the crowd stares. They don’t see the
-struggle and work it took for you to conquer certain sounds. The work it took for you
-to learn how to overcome the first stammer and how to stop the train of stammers that
-follow. They only see the failure you are now.
-“I-I-eee I.”
-
-Your brain. The marvelous entity that gives us our intelligence, but also restrains us
-from improving beyond its invisible capabilities and defects. The murmurs of the brain
-whisper in your ears like sirens. Telling you to stop embarrassing yourself and quit.
-The memories of failing in the past bubble up to the surface. The brain urges you to
-stop trying or try harder next time. To stop speaking because why would anyone want to
-hear what you have to say?
-
-Your brain. The one crying out in fear with no one listening. The one crying out in
-frustration with on one listening. The one who pushed you to keep trying is now
-telling you to stop. The internal storm is swirling to the max as the others around
-you lose interest in what words, if any, exit your mouth.
-
-“Have have a-a”
-
-Your internal storm manifests itself into physical stammers as you near the end of the
-sentence. Your throat tightens. You stop speaking. Remembering your exercises, you try
-rocking back and forth to soothe yourself, but, to no avail, your diaphragm freezes
-stopping any air from reaching your lungs. No words will escape your mouth.
-Now. It is just you and your stammer.
-
-Everything culminates to this one moment. The moment where you must force the air into your lungs to either end your stammer or prolong it. The moment where words are clawing through your throat as you try to speak. Words yearning to enter the world and proclaim what you have to say. Each word. Every syllable. All fighting for survival.
-Once more you glance at their faces. Their faces are more agitated than before. More
-annoyed. More annoyed that they have to listen to you a bumbling idiot. You feel
-angry. Angry that you can’t speak like anyone else. Angry that people have to wait for
-you to speak. Angry that people can’t understand. Won’t EVER understand what you go
-through each time you open your mouth. The bravery it takes.
-Anger. Frustration. Despair. Crying out for someone to listen. You don’t question why
-you, but rather why won’t THEY listen? And why should they listen to you?
-
-The questions swirl in your mind until you finally erupt:
-“I Have Voice!”
