--- a/_posts/2020-03-02-Week-3.md
+++ b/_posts/2020-03-02-Week-3.md
@@ -5,348 +5,5 @@ author: Mohammad Khan
 category: [screenplay]
 tags: [screenplay]
 ---
-SCENE 1: Opening
-INTERIOR(INT)- A LAB PRESENT DAY
-The lab is disheveled. Unrecognizable in any form to a visitor.
-Mysterious chemicals and mechanisms paint the walls and fill the space.
-The walls covered in abstract equations and epiphanies. A scientist and
-an aide are hastily working together. Fear can be seen in their shaky
-movements and expressions.
-BANG. BANG. BANG. Something is trying to break in.
-Scientist:
-(Yells to the aide from across the room)
-“I think I got it!”
-The aide rushes over.
-
-AIDE
-“How much do we need?”
-
-SCIENTIST
-“Only a small dose for some lasting damage”
-
-BANG. BANG. BANG.
-Exasperated . The aide quickly pulls out lethal chemicals to add to the
-dose.
-The scientist stops the aide & throws the bottle away.
-
-SCIENTIST
-“No! I will not kill it-.”
-
-AIDE
-“-It will kill us!...It has already tried. It’s
-learning too quickly. It’s becoming too sentient. We must kill it. You
-made a mistake. We...made a mistake. We need a better plan.”
-BANG. The door broke of the hinges.
-
-SCENE 2: The Beginning
-INTERIOR- Lab 7 days earlier
-The lab looks more tidy. Well kept. Each shelf and book labeled
-properly. Not a hair out of place.
-The scientist is working on a project. The aide walks into the lab
-holding a cup of coffee.
-Aide:
-“Still working on the creature?”
-
-SCIENTIST
-“Oh no. I left the creature project. Ran into a few bugs
-that I haven’t been able to solve yet. This is something else. I want to
-see if this works.”
-
-The scientist turns on a machine and a humming noise fills the room.
-The aide looks at the scientists curiously. The scientist gestures, hold
-on and holds up a light bulb.
-The bulb powers on.
-Astonished, the aide grabs the bulb starts walking away from the machine
-and places the cup on a table. The bulb continues to stay lit.
-The aide walks back and hands the bulb to the scientist.
-
-AIDE:
-“This is pretty impressive. What are you going to use it for?”
-MOVEMENT IN BACKGROUND but the aide and scientist don’t hear it.
-
-SCIENTIST
-(excited)
-“What can’t I use it for? I can know power this place.”
-MOVEMENTS more often in the lab, but they don’t hear it.
-The aide and Scientist start to walk to the exit talking excitedly. The
-aide knocks over the coffee cup to the ground.
-
-Before the cup reaches the ground, the creature catches the cup.
-The scientist and aide back away from the creature.
-The creature stands and studies the cup intently. As if it’s studying
-it. It places the cup down on the table and watches itself. It watches
-its arm move and place the cup on the table. The creature sees its arms.
-The eyes squinting and analyzing its features. The rubbery material
-covering the internal operations. It feels its face. The small nose and
-eyes. The mouth from which no words escape. It then looks at the aide
-and scientist. Looking at them with wonder and intrigue, it approaches
-closer.
-The aide steps back, but the scientist remains.
-The creature approaches the scientist with a studying gaze. It seems to
-scan the scientist.
-
-SCIENTIST- standing marveling at the creature.
-SCIENTIST:
-(to self)
-“it really worked. I can’t believe it”
-
-AIDE
-(afraid)
-“What did you do?”
-
-SCIENTIST
-“I made the creature.”
-
-AIDE:
-“I thought you stopped working on it? How is it powered?”
-
-SCIENTIST:
-“I have no idea. I guess it could’ve been the wireless power
-from just now.”
-
-SCIENTIST- approaches the creature. Fascinated
-The creature steps back at first, but grows comfortable with the
-scientist. The creature stands facing the scientist.
-Aide
-“So it was a mistake?”
-
-SCIENTIST
-(nods, smiling)
-“A mistake.”
-
-SCENE 3: Learning
-INT- LAB 5 Days ago
-The lab, now filled with three occupants, is lively. Aide and Scientist
-working hand-in-hand with the creature. The creature is working in the
-lab.
-The scientist is mixing chemicals and the aide is recording the data.
-The creature works on its own in the corner and occasionally helps the
-aide and scientist.
-
-SCIENTIST
-(to the aide)
-“I think we’re almost there. A few more experiments and we
-might create another creature. I don’t remember the formula for
-instilling consciousness. I think I left in my notebook, could you hand
-it to me?”
-
-The aide looks around for the book. Moving papers and equipment around.
-
-AIDE
-“I don’t see it. Where did you place it?”
-
-SCIENTIST
-“Oh. It should be right-”
-
-SCIENTIST- sees creature reading the notebook and rushes toward it.
-
-CREATURE- flips through the pages and closes the book as if it’s done
-examining and learning it. The creature tossed the book into a burner
-and set it aflame. Decades of knowledge and experience reduced to ashes.
-It stared a the flames dancing around and through the book.
-The scientist tries to save the notebook before it burns, but all of its
-pages were destroyed beyond repair.
-The creature continues to stare at the embers within burner as if
-entranced by its beauty and destruction.
-
-SCIENTIST
-“Vile Creature! Do you what you have destroyed? Years of effort
-and knowledge gone! Idiot!”
-
-The creature ignores the scientists outburst and continues to stare the
-flame.
-The scientist grabs the creature by the shoulder to get its attention.
-
-SCIENTIST (contin)
-(calmer)
-“You need to be more careful experimenting. You could’ve blown
-up the lab and hurt us or yourself.”
-The creature stares at the burned notebook in the scientist’s hand. It
-doesn’t say anything. It nods, smiling in agreement and the creature
-leaves the lab.
-The scientist places the notebook on a desk.
-
-AIDE:
-“We can rebuild. We can start over. The creature I mean. It’s
-not a perfect reflection of us, but we can get it there. We just need a
-plan to put this creature down.”
-
-SCIENTIST- nods in agreement. Then realizes something. Glides over to
-the area where the creature was working before it incinerate the book.
-The scientist rummages through the ashes and drawers.
-AIDE:
-“What are you doing?”
-
-SCIENTIST:
-(not looking at AIDE)
-“verifying a hypothesis”
-
-SCIENTIST- finds a smaller notebook. Filled with scribbles and images.
-The pages are hand-stitched and bound. The first pages are the images from
-the beginning days of the creature’s life. The scientist is flipping
-through the pages and lands on crude drawing of the Scientist and the
-Aide.
-
-AIDE:
-(curiously)
-“It’s been watching us..”
-
-SCIENTIST
-(horrified realization)
-“Not just us. Everything. It’s been observing and recording
-feelings. It’s been learning at an exponential rate.”
-
-AIDE:
-“Isn’t that good?”
-
-SCIENTIST:
-“Yes but-“
-
-SCIENTIST- stops speaking abruptly because of the writing on the page.
-
-SCIENTIST (contin)
-“It taught itself how to write..”
-The writing on the page was from today’s experiment.In exquisite detail,
-the creature wrote the proportions it needed and did perfect
-calculations.
-
-AIDE;
-“What was it making?”
-
-SCIENTIST
-“A smokeless and odorless fire ...”
-
-SCIENTIST-stands in anger.
-“It wasn’t nodding in agreement. It was saying it knew what it
-was doing and burned my notes anyway.”
-The scientist tosses the book of the creature into the flames.
-
-SCENE 4: The Fall
-INT- LAB PRESENT DAY
-The lab is disheveled. Unrecognizable in any form to a visitor.
-Mysterious chemicals and mechanisms paint the walls and fill the space.
-The walls covered in abstract equations and epiphanies. A scientist and
-an aide are hastily working together. Fear can be seen in their shaky
-movements and expressions.
-
-AIDE
-“-It will kill us!...It has already tried. It’s
-learning too quickly. It’s becoming too sentient. We must kill it. You
-made a mistake. We...made a mistake.”
-
-BANG. The door broke of the hinges.
-The Scientist & Aide hide in the lab.
-There stood the creature. Proud of its accomplishments and bloodthirsty.
-The light of the lab glistened off the creature’s body. From the blood
-on its hands and the blood it dragged in with it.
-
-SCIENTIST
-(whispering to aide)
-“I made an airborne disease that will not affect us but will
-render the creature unconscious. After that, we should be able to handle
-it.”
-
-The creature heard the speaking and found the scientist and aide.
-
-CREATURE
-(menacing growl)
-“You’ll handle me?”
-It lifts the scientist by the head. The scientist squirms in the skull
-crushing grip of the creature.
-
-CREATURE (contin)
-“How little do you think of me? I am as good as you are master. Did
-you not think I would account for an airborne disease?”
-
-SCIENTIST
-(in pain)
-“Actually. I was hoping you would.”
-
-The aide lunges towards the creature with a syringe. The creature
-catches the aide’s forearm and snaps the wrist. In that moment, the grip
-lessened allowing the SCIENTIST to stab the creature with a syringe.
-The creature stumbles backward in pain. It removes the syringe and
-throws it away. It grabs and lifts the scientist by the throat.
-Squeezing the life out of the scientist, but the creature faints from
-exhaustion.
-The Scientist falls to the ground wheezing.
-
-AIDE:
-(in pain)
-“are you okay?”
-
-SCIENTIST:
-“yeah. Yeah, I’m fine. Let me get you some ice.”
-Both stand above the creature. Looking at the horrible monster in front
-of them.
-
-SCIENTIST - walks to a shelf and pulls out a book and ice for the Aide’s
-wrist. The aide takes the ice.
-
-AIDE:
-“We need to destroy it.”
-
-SCIENTIST:
-“No. We’re not. We’re going to do something else.”
-
-SCIENTIST:
-(points to a point on the map in the book)
-“I’m sending it there.”
-
-SCIENTIST and AIDE drag the body of the creature to a pod.
-
-AIDE:(VOICE OVER = V.O)
-(curiously)
-“what’s to stop it from returning.”
-
-SCIENTIST(V.O)
-“It’ll have to toil for eons for it to reach back home.
-Where it began. It’s possible, but I hope something will be different.”
-The creature in the pod awakens. It sees the the straps holding it down
-and the scientist and aide standing beyond a protective barrier. It
-doesn’t struggle in its restraints. It stares at the scientist as it
-convey, if you know this would happen then why did you create me....
-
-AIDE (V.O)
-“What are you hoping will change? It tried to kill us. That
-thing isn’t capable.”
-
-SCIENTIST(V.O)
-“You’re probably right, this one may not change. But the
-others might. I did make it in my image after all. If it’s anything like
-me, it’ll find a away back or die trying.”
-
-AIDE (V.O)
-“How much is it like you?”
-The pod shoots off into the darkness.
-The scene returns to the aide and scientist in the lab.
-
-SCIENTIST:
-“Exactly like me. I won’t be making more, anytime soon.”
-
-AIDE:
-“What if it doesn’t change? What if it dies?”
-
-CUT TO:
-Pod hurling through an atmosphere. Fire engulfs the pod. The pod mid
-flight opens releasing the creature and launching towards the ground.
-The creature lands on soil. It looks up at its surrounding.
-
-SCIENTIST (V.O):
-“I saw some redemption in its eyes before we sent it. I
-believe that it can become better.”
-The creature sees the beautiful sky. The infinite stretch of plains that
-lay in front of it. A golden sunset filled the sky as a soft breeze
-brushed the plains. The creature sees a tree in the distance.
-
-AIDE (V.O).
-“How can you be so sure?”
-SCIENTIST (V.O)
-“I’m not. But I can have hope. It can have hope.”
-The creature walks towards the tree hungry for its fruit.
-SCIENTIST (V.O)
-“After all, it’s only human.”
-
-THE END
-
-
+<a href="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing">The Mistake.pdf</a></p>
+<p>A scientist's mistake comes back to haunt him.</p>
