embedd pdf in Year 1

--- a/_posts/2020-02-17-Week-1.md
+++ b/_posts/2020-02-17-Week-1.md
@@ -10,6 +10,7 @@ Everything Has Beauty.pdf </a>
 
 <p>An Abberation of death walks among us and searches for someone who sees it.</p>
 
+<embed src="../pdfs/Year 1/Week 1_Everything Has Beauty.pdf" width="800px" height="2100px" />
 
 <iframe
 src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing&embedded=true"
