added screenplays, embedded pdfs

--- a/_posts/2020-02-24-Week-2.md
+++ b/_posts/2020-02-24-Week-2.md
@@ -10,7 +10,10 @@ The Speech.pdf </a>	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
 
 <p>An influential person overcomes a stutter in dire times.</p>
 <br>
-<iframe
+Or view it below:
+<embed src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
+
+<!-- <iframe
 src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing&embedded=true"
 style="width:718px; height:700px;" frameborder="0"></iframe>
-<br>
+<br> -->
