--- a/_posts/2020-03-02-Week-3.md
+++ b/_posts/2020-03-02-Week-3.md
@@ -5,5 +5,8 @@ author: Mohammad Khan
 category: [screenplay]
 tags: [screenplay]
 ---
-<a href="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing">The Mistake.pdf</a></p>
+<a href="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing">The Mistake.pdf</a>
 <p>A scientist's mistake comes back to haunt him.</p>
+
+Or view it below: 
+<embed src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
