Added 30 short stories

--- a/_posts/2020-02-24-Week-2.md
+++ b/_posts/2020-02-24-Week-2.md
@@ -2,13 +2,14 @@
 layout: post
 title: Week 2-The Speech
 author: Mohammad Khan
-category: [short story]
+category: [Short Story]
 tags: [short story]
 ---
+<p>An influential person overcomes a stutter in dire times.</p>
+
 <a href="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing">
 The Speech.pdf </a>	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
 
-<p>An influential person overcomes a stutter in dire times.</p>
 <br>
 Or view it below:
 <embed src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
