--- a/_posts/2020-02-17-Week-1.md
+++ b/_posts/2020-02-17-Week-1.md
@@ -5,13 +5,14 @@ author: Mohammad Khan
 category: [Short Story]
 tags: [short story]
 ---
+<p>An Abberation of death walks among us and searches for someone who sees it.</p>
+
 <a href="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing">
 Everything Has Beauty.pdf </a>
 
-<p>An Abberation of death walks among us and searches for someone who sees it.</p>
 
 Or view below:
-<embed src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
+<embed src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing" width="800px" height="2100px" />
 
 <!-- <iframe
 src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing&embedded=true"
