--- a/_posts/2020-05-11-Week-13.md
+++ b/_posts/2020-05-11-Week-13.md
@@ -3,25 +3,25 @@ layout: post
 title: Week 13-16:Ramadan 2020
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story] [memoir]
 ---
 Ramadan during the 2020 COVID-19 pandemic 
 
+<p>Week 13: 05/11/2021:</p>
 <p><a href="https://drive.google.com/file/d/1b8IgfYX3Ngvp8VqiCGzPr17fcOWXZsjK/view?usp=sharing">
 Ramadan 2020: 1st 10 days.pdf</a></p>
-<p>Week 13: 05/11/2021:</p>
 
-<p><a href="https://drive.google.com/file/d/18kixUJJZCYiTa2BrTJg__7ZNDZmra5-1/view?usp=sharing">Ramadan 2020: 2nd 10 days.pdf</a></p>
 <p>Week 14: 05/18/2021:</p>
+<p><a href="https://drive.google.com/file/d/18kixUJJZCYiTa2BrTJg__7ZNDZmra5-1/view?usp=sharing">Ramadan 2020: 2nd 10 days.pdf</a></p>
 
-<p><a href="https://drive.google.com/file/d/1nQ8HTPGbJY6W8JYDmXIdssdhoYjINPWL/view?usp=sharing">Ramadan 2020: 3rd 10 days.pdf</a></p>
 <p>Week 15: 05/25/2021</p>
+<p><a href="https://drive.google.com/file/d/1nQ8HTPGbJY6W8JYDmXIdssdhoYjINPWL/view?usp=sharing">Ramadan 2020: 3rd 10 days.pdf</a></p>
 
-<p><a href="https://drive.google.com/file/d/1iHY3xRsquZb-45sa-ON9vOxwsLcQn_EF/view?usp=sharing">Ramadan 2020: Eid al-Fitr & Beyond.pdf</a></p>
 <p>Week 16: 05/01/2021:</p>
+<p><a href="https://drive.google.com/file/d/1iHY3xRsquZb-45sa-ON9vOxwsLcQn_EF/view?usp=sharing">Ramadan 2020: Eid al-Fitr & Beyond.pdf</a></p>
 
 <p><a href="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/view?usp=sharing">Ramadan 2020: complete series</a></p>
 
 Or view the compiled story below: 
-<embed src="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
+<embed src="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/view?usp=sharing" width="800px" height="2100px" />
 
