--- a/_posts/2020-06-08-Week-17.md
+++ b/_posts/2020-06-08-Week-17.md
@@ -7,25 +7,26 @@ tags: [screenplay]
 ---
 How different levels of wealth deal with life's problems.
 
+
+<p>Week 17: 06/08/2021:</p>
 <p><a href="https://drive.google.com/file/d/18Fn4ht0h-RUmwklgBZzh3X_WDWpy1FmQ/view?usp=sharing">
 Grievances of the Poor: The Homeless.pdf</a></p>
-<p>Week 17: 06/08/2021:</p>
 
+<p>Week 18: 06/15/2021:</p>
 <p><a href="https://drive.google.com/file/d/1x-A6aPLBNyw5ddJRB53ssfA1LEU9H6Oo/view?usp=sharing">
 Grievances of the Poor: The Lower Classs.pdf</a></p>
-<p>Week 18: 06/15/2021:</p>
 
+<p>Week 19: 06/22/2021</p>
 <p><a href="https://drive.google.com/file/d/1VFoa-AUzu6t6VCh69zWfCFkge3B3P6on/view?usp=sharing">
 Grievances of the Poor: The Middle Class.pdf</a></p>
-<p>Week 19: 06/22/2021</p>
 
+<p>Week 20: 06/29/2021:</p>
 <p><a href="https://drive.google.com/file/d/1HIeoS1vKh00ANPnARFEDJ2JOl4wX5p5y/view?usp=sharing">
 Grievances of the Poor: The Upper Class.pdf</a></p>
-<p>Week 20: 06/29/2021:</p>
 
 <p><a href="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/view?usp=sharing">
 Grievances of the Poor.pdf</a></p>
 
 Or view the compiled story below: 
-<embed src="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
+<embed src="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/view?usp=sharing" width="800px" height="2100px" />
 
