--- a/_posts/2020-07-06-Week-21.md
+++ b/_posts/2020-07-06-Week-21.md
@@ -7,9 +7,10 @@ tags: [short story]
 ---
 Two beings, one cursed with life and one cursed with death, discover the meaning of their existence.
 
+
 <p><a href="https://drive.google.com/file/d/1F2p9pU7tBrMzrqjnbDh75dUB618VML-l/view?usp=sharing">
 An Eternal Bond.pdf</a></p>
 
 Or view it below: 
-<embed src="https://drive.google.com/file/d/1F2p9pU7tBrMzrqjnbDh75dUB618VML-l/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
+<embed src="https://drive.google.com/file/d/1F2p9pU7tBrMzrqjnbDh75dUB618VML-l/view?usp=sharing" width="800px" height="2100px" />
 
