--- a/_posts/2020-03-02-Week-3.md
+++ b/_posts/2020-03-02-Week-3.md
@@ -10,4 +10,7 @@ tags: [screenplay]
 <a href="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing">The Mistake.pdf</a>
 
 Or view it below: 
-<embed src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing" width="800px" height="2100px" />
+<iframe
+src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing&embedded=true"
+style="width:718px; height:700px;" frameborder="0"></iframe> 
+<!-- <embed src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing" width="800px" height="2100px" /> -->
