--- a/_posts/2020-07-13-Week-22.md
+++ b/_posts/2020-07-13-Week-22.md
@@ -11,5 +11,5 @@ A historian chases myths of a dessert library of infinite knowledge.
 An Eternal Problem.pdf</a></p>
 
 Or view it below: 
-<embed src="https://drive.google.com/file/d/1Va3RcCiOmqQA5vbvwXe56eZSf7cF3l_L/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
+<embed src="https://drive.google.com/file/d/1Va3RcCiOmqQA5vbvwXe56eZSf7cF3l_L/view?usp=sharing" width="800px" height="2100px" />
 
