--- a/_posts/2020-07-06-Week-21.md
+++ b/_posts/2020-07-06-Week-21.md
@@ -12,5 +12,8 @@ Two beings, one cursed with life and one cursed with death, discover the meaning
 An Eternal Bond.pdf</a></p>
 
 Or view it below: 
-<embed src="https://drive.google.com/file/d/1F2p9pU7tBrMzrqjnbDh75dUB618VML-l/view?usp=sharing" width="800px" height="2100px" />
+<!-- <embed src="https://drive.google.com/file/d/1F2p9pU7tBrMzrqjnbDh75dUB618VML-l/view?usp=sharing" width="800px" height="2100px" /> -->
+<iframe
+src="https://drive.google.com/file/d/1F2p9pU7tBrMzrqjnbDh75dUB618VML-l/view?usp=sharing&embedded=true"
+style="width:718px; height:700px;" frameborder="0"></iframe>
 
