--- a/_posts/2020-02-17-Week-1.md
+++ b/_posts/2020-02-17-Week-1.md
@@ -13,7 +13,8 @@ Everything Has Beauty.pdf </a>
 
 Or view below:
 <!-- <embed src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing" width="800px" height="2100px" /> -->
-<a href="../pdfs/Year 1/Week 1_Everything Has Beauty.pdf">Week 1_Everything Has Beauty</a>
+<!-- <a href="../pdfs/Year 1/Week 1_Everything Has Beauty.pdf">Week 1_Everything Has Beauty</a>
+ -->
 <iframe
 src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing&embedded=true"
 style="width:718px; height:700px;" frameborder="0"></iframe> 
