--- a/_posts/2020-04-06-Week-8.md
+++ b/_posts/2020-04-06-Week-8.md
@@ -10,4 +10,7 @@ Humans have been destroying mother nature for so long, she strikes back.
 <p><a href="https://drive.google.com/file/d/1ERz6nUwUot7On5krygSk9ZaMWbAURNUW/view?usp=sharing">Evolution.pdf</a></p>
 
 Or view it below: 
-<embed src="https://drive.google.com/file/d/1QWrVrBollbR79s95djoS83ViYCQaOExl/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
+<!-- <embed src="https://drive.google.com/file/d/1QWrVrBollbR79s95djoS83ViYCQaOExl/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
+<iframe
+src="https://drive.google.com/file/d/1QWrVrBollbR79s95djoS83ViYCQaOExl/view?usp=sharing&embedded=true"
+style="width:718px; height:700px;" frameborder="0"></iframe> 
