--- a/_posts/2020-06-08-Week-17.md
+++ b/_posts/2020-06-08-Week-17.md
@@ -28,5 +28,8 @@ Grievances of the Poor: The Upper Class.pdf</a></p>
 Grievances of the Poor.pdf</a></p>
 
 Or view the compiled story below: 
-<embed src="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/view?usp=sharing" width="800px" height="2100px" />
+<!-- <embed src="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/view?usp=sharing" width="800px" height="2100px" /> -->
+<iframe
+src="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/view?usp=sharing&embedded=true"
+style="width:718px; height:700px;" frameborder="0"></iframe>
 
