--- a/_posts/2020-07-20-Week-23.md
+++ b/_posts/2020-07-20-Week-23.md
@@ -11,5 +11,8 @@ With the death of his father, a married man struggles to reconcile with his past
 An Eternal Fear.pdf</a></p>
 
 Or view it below: 
-<embed src="https://drive.google.com/file/d/1pRlrxqeYXopdAoTSUn9hemOeCSV3eRvy/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
+<!-- <embed src="https://drive.google.com/file/d/1pRlrxqeYXopdAoTSUn9hemOeCSV3eRvy/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
+<iframe
+src="https://drive.google.com/file/d/1pRlrxqeYXopdAoTSUn9hemOeCSV3eRvy/view?usp=sharing&embedded=true"
+style="width:718px; height:700px;" frameborder="0"></iframe>
 
