--- a/_posts/2020-08-03-Week-25.md
+++ b/_posts/2020-08-03-Week-25.md
@@ -1,25 +1,25 @@
 ---
 layout: post
-title: Week 25-28:One the Other side of the Fence
+title: Week 25-28:On the Other side of the Fence
 author: Mohammad Khan
 category: [Screenplay]
 tags: [screenplay]
 ---
 Human race under the thumb of alien oppressors launches one last rebellion.
 
-<p>Week 25: 08/03/2021:</p>
+<p>Week 25: 08/03/2020:</p>
 <p><a href="https://drive.google.com/file/d/1aNtoMZfNBUlNawzXgWmA8NWy33FmWhLI/view?usp=sharing">
 On the Other Side of the Fence: Teaser.pdf</a></p>
 
-<p>Week 26: 08/10/2021:</p>
+<p>Week 26: 08/10/2020:</p>
 <p><a href="https://drive.google.com/file/d/1MGjvD4b8VnMD_gigO6IPyqr7fsexvN37/view?usp=sharing">
 On the Other Side of the Fence: Act 1: Sunset Ranch.pdf</a></p>
 
-<p>Week 27: 08/17/2021</p>
+<p>Week 27: 08/17/2020:</p>
 <p><a href="https://drive.google.com/file/d/1EarABmlhdc2TCszf8yZxBwEye_AXIuF1/view?usp=sharing">
 On the Other Side of the Fence: Act 2: Descent into Darkness.pdf</a></p>
 
-<p>Week 28: 08/24/2021:</p>
+<p>Week 28: 08/24/2020:</p>
 <p><a href="https://drive.google.com/file/d/1_SL6ZKTHu8cu70_3y03dQeI29wGRAUCU/view?usp=sharing">
 On the Other Side of the Fence: Act 3: Broken Mirrors.pdf</a></p>
 
@@ -27,5 +27,7 @@ On the Other Side of the Fence: Act 3: Broken Mirrors.pdf</a></p>
 On the Other Side of the Fence complete script.pdf</a></p>
 
 Or view the compiled story below: 
-<embed src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/view?usp=sharing#toolbar=0" width="800px" height="2100px" />
-
+<!-- <embed src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
+<iframe
+src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/view?usp=sharing&embedded=true"
+style="width:718px; height:700px;" frameborder="0"></iframe>
