Added bullet list

--- a/_posts/2021-06-07-Week-69.md
+++ b/_posts/2021-06-07-Week-69.md
@@ -8,19 +8,19 @@ tags: [short story]
 Epitaphs of ghosts
 
 <p>Week 69: 06/07/2021:</p>
-<p><a href="https://drive.google.com/file/d/1h13piIABGtsZc3M7KrAe_QvoCHRnwUmq/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1h13piIABGtsZc3M7KrAe_QvoCHRnwUmq/view?usp=sharing">
 Accolades: Maya Oudeh.pdf</a></p>
 
 <p>Week 70: 06/14/2021:</p>
-<p><a href="https://drive.google.com/file/d/1l_PNz5iHk1kFKzBVKy4rjGnBX6ZNdGS_/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1l_PNz5iHk1kFKzBVKy4rjGnBX6ZNdGS_/view?usp=sharing">
 Accolades: Hank Abernathy.pdf</a></p>
 
 <p>Week 71: 06/21/2021</p>
-<p><a href="https://drive.google.com/file/d/1CPW8LfBypLw9mLDkTKn15YhDCXSVXaM4/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1CPW8LfBypLw9mLDkTKn15YhDCXSVXaM4/view?usp=sharing">
 Accolades: Mera Morellio.pdf</a></p>
 
 <p>Week 72: 06/28/2021:</p>
-<p><a href="https://drive.google.com/file/d/1-0xgu1BTK8HnVs4JU4CXIYlBFKvw9U5x/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1-0xgu1BTK8HnVs4JU4CXIYlBFKvw9U5x/view?usp=sharing">
 Accolades: Abigail Dawara.pdf</a></p>
 
 <p><a href="https://drive.google.com/file/d/1ZCOQHuhZAXKwSGGqzpPNFpqZ1PSXXVDr/view?usp=sharing">
