--- a/_posts/2021-04-12-Week-61.md
+++ b/_posts/2021-04-12-Week-61.md
@@ -8,19 +8,19 @@ tags: [short story]
 Two friends send letters to each other during an apocalypse
 
 <p>Week 61: 04/12/2021:</p>
-<p><a href="https://drive.google.com/file/d/1UD9ueqBjGWQcR-SguBQ6nc-afdJkFLwQ/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1UD9ueqBjGWQcR-SguBQ6nc-afdJkFLwQ/view?usp=sharing">
 Archives: Part I.pdf</a></p>
 
 <p>Week 62: 04/19/2021:</p>
-<p><a href="https://drive.google.com/file/d/1yymk9b2GoHMe3Jv-EbXzK8bn5_NWFXlQ/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1yymk9b2GoHMe3Jv-EbXzK8bn5_NWFXlQ/view?usp=sharing">
 Archives: Part II.pdf</a></p>
 
 <p>Week 63: 04/26/2021</p>
-<p><a href="https://drive.google.com/file/d/1Fi0y6OR8sglhV5SQ9wXWriq30Ur_KXJM/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1Fi0y6OR8sglhV5SQ9wXWriq30Ur_KXJM/view?usp=sharing">
 Archives: Part III.pdf</a></p>
 
 <p>Week 64: 05/03/2021:</p>
-<p><a href="https://drive.google.com/file/d/1GzGi984qYw8-jpftScocn-fZSkpyyvgp/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1GzGi984qYw8-jpftScocn-fZSkpyyvgp/view?usp=sharing">
 Archives: Part IV.pdf</a></p>
 
 <p><a href="https://drive.google.com/file/d/1ICEiEsziE3TYqeHpnmsZYxw7O0DCZp4E/view?usp=sharing">
