--- a/_posts/2020-03-09-Week-4.md
+++ b/_posts/2020-03-09-Week-4.md
@@ -7,13 +7,16 @@ tags: [screenplay]
 ---
 A single battle from 3 perspectives 
 
+
+
 <p>Week 4: 03/09/2020: A single battle from perspective of Foxes.</p>
-<p><a href="https://drive.google.com/file/d/1CYb76cG2lODBVJaBhxwEP8Q5C2OWWuw4/view?usp=sharing#toolbar=0">Stories of War: The Foxes PDF</a></p>
+- <p><a href="https://drive.google.com/file/d/1CYb76cG2lODBVJaBhxwEP8Q5C2OWWuw4/view?usp=sharing#toolbar=0">Stories of War: The Foxes PDF</a></p>
 
 <p>Week 5: 03/16/2020: A single battle from perspective of Bears.</p>
-<p><a href="https://drive.google.com/file/d/1f07Kl2cYwx8Ono2KrbGSr5DbkqbKr1QY/view?usp=sharing">Stories of War: The Bears PDF</a></p>
+- <p><a href="https://drive.google.com/file/d/1f07Kl2cYwx8Ono2KrbGSr5DbkqbKr1QY/view?usp=sharing">Stories of War: The Bears PDF</a></p>
 
-<p>Week 6: 03/23/2020: A single battle from perspective of Doves.</p><p><a href="https://drive.google.com/file/d/1QWrVrBollbR79s95djoS83ViYCQaOExl/view?usp=sharing">Stories of War: The Doves PDF</a></p>
+<p>Week 6: 03/23/2020: A single battle from perspective of Doves.</p>
+- <p><a href="https://drive.google.com/file/d/1QWrVrBollbR79s95djoS83ViYCQaOExl/view?usp=sharing">Stories of War: The Doves PDF</a></p>
 
 <p>Compiled 3 scripts</p><p><a href="https://drive.google.com/file/d/1D6gAjqNogWqfy9LkVRxnLoPnwVSeo_na/view?usp=sharing">Stories of War PDF</a></p>	
 
