--- a/_posts/2020-04-13-Week-9.md
+++ b/_posts/2020-04-13-Week-9.md
@@ -7,18 +7,21 @@ tags: [short story]
 ---
 In a dying world where disabled people are hunted and killed, an 8 year old boy looks for an escape.
 
+
+
+
 <p>Week 9: 04/13/2021:</p>
-<p><a href="https://drive.google.com/file/d/1j47bZtdIGcRn2UzmJoMAkvcrDROYmdNh/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1j47bZtdIGcRn2UzmJoMAkvcrDROYmdNh/view?usp=sharing">
 The Paradigm Shift: Prologue.pdf</a></p>
 
 <p>Week 10: 04/16/2021:</p>
-<p><a href="https://drive.google.com/file/d/1pdmkqk3LgFcYJvKQcGkM6VMp-CYiuk06/view?usp=sharing">The Paradigm Shift: Month 1.pdf</a></p>
+- <p><a href="https://drive.google.com/file/d/1pdmkqk3LgFcYJvKQcGkM6VMp-CYiuk06/view?usp=sharing">The Paradigm Shift: Month 1.pdf</a></p>
 
 <p>Week 11: 04/23/2021</p>
-<p><a href="https://drive.google.com/file/d/1CRXycGbrkYVDwx7ZY8vAj0MrcfpVZPMt/view?usp=sharing">The Paradigm Shift: Month 2.pdf</a></p>
+- <p><a href="https://drive.google.com/file/d/1CRXycGbrkYVDwx7ZY8vAj0MrcfpVZPMt/view?usp=sharing">The Paradigm Shift: Month 2.pdf</a></p>
 
 <p>Week 12: 04/30/2021:</p>
-<p><a href="https://drive.google.com/file/d/1jyE7S1wlX4lXhwTrHum88wx5i8dVR9FL/view?usp=sharing">The Paradigm Shift: Month 3</a></p>
+- <p><a href="https://drive.google.com/file/d/1jyE7S1wlX4lXhwTrHum88wx5i8dVR9FL/view?usp=sharing">The Paradigm Shift: Month 3</a></p>
 
 <p><a href="https://drive.google.com/file/d/1pBaHD12qBnrOQJsq-U2_j-BeSPZviKIQ/view?usp=sharing">The Paradigm Shift Complete PDF</a></p>
 
