--- a/_posts/2020-05-11-Week-13.md
+++ b/_posts/2020-05-11-Week-13.md
@@ -5,20 +5,23 @@ author: Mohammad Khan
 category: [Memoir]
 tags: [memoir]
 ---
-Ramadan during the 2020 COVID-19 pandemic 
+Ramadan during the first year of COVID-19 pandemic 
+
+
+
 
 <p>Week 13: 05/11/2020:</p>
-<p><a href="https://drive.google.com/file/d/1b8IgfYX3Ngvp8VqiCGzPr17fcOWXZsjK/view?usp=sharing">
+- <p><a href="https://drive.google.com/file/d/1b8IgfYX3Ngvp8VqiCGzPr17fcOWXZsjK/view?usp=sharing">
 Ramadan 2020: 1st 10 days.pdf</a></p>
 
 <p>Week 14: 05/18/2020:</p>
-<p><a href="https://drive.google.com/file/d/18kixUJJZCYiTa2BrTJg__7ZNDZmra5-1/view?usp=sharing">Ramadan 2020: 2nd 10 days.pdf</a></p>
+- <p><a href="https://drive.google.com/file/d/18kixUJJZCYiTa2BrTJg__7ZNDZmra5-1/view?usp=sharing">Ramadan 2020: 2nd 10 days.pdf</a></p>
 
 <p>Week 15: 05/25/2020:</p>
-<p><a href="https://drive.google.com/file/d/1nQ8HTPGbJY6W8JYDmXIdssdhoYjINPWL/view?usp=sharing">Ramadan 2020: 3rd 10 days.pdf</a></p>
+- <p><a href="https://drive.google.com/file/d/1nQ8HTPGbJY6W8JYDmXIdssdhoYjINPWL/view?usp=sharing">Ramadan 2020: 3rd 10 days.pdf</a></p>
 
 <p>Week 16: 05/01/2020:</p>
-<p><a href="https://drive.google.com/file/d/1iHY3xRsquZb-45sa-ON9vOxwsLcQn_EF/view?usp=sharing">Ramadan 2020: Eid al-Fitr & Beyond.pdf</a></p>
+- <p><a href="https://drive.google.com/file/d/1iHY3xRsquZb-45sa-ON9vOxwsLcQn_EF/view?usp=sharing">Ramadan 2020: Eid al-Fitr & Beyond.pdf</a></p>
 
 <p><a href="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/view?usp=sharing">Ramadan 2020: complete series</a></p>
 
