Adding more posts

--- a/_posts/Year 1/2020-05-11-Week-13.md
+++ b/_posts/Year 1/2020-05-11-Week-13.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 13-16:Ramadan 2020
+title: Week 13-16 - Ramadan 2020
 author: Mohammad Khan
 category: [Memoir]
 tags: [memoir]
