--- a/_posts/Year 1/2020-06-08-Week-17.md
+++ b/_posts/Year 1/2020-06-08-Week-17.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 17-20:Grievances of the Poor
+title: Week 17-20 - Grievances of the Poor
 author: Mohammad Khan
 category: [Screenplay]
 tags: [screenplay]
