--- a/_posts/Year 1/2020-08-03-Week-25.md
+++ b/_posts/Year 1/2020-08-03-Week-25.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 25-28:On the Other side of the Fence
+title: Week 25-28 - On the Other side of the Fence
 author: Mohammad Khan
 category: [Screenplay]
 tags: [screenplay]
