--- a/_posts/Year 1/2020-02-17-Week-1.md
+++ b/_posts/Year 1/2020-02-17-Week-1.md
@@ -12,9 +12,21 @@ Everything Has Beauty.pdf </a>
 
 
 Or view below:
+
+<div id="retainable-rss-embed" 
+data-rss="https://medium.com/feed/mohammadkhan135"
+data-maxcols="3" 
+data-layout="grid" 
+data-poststyle="inline" 
+data-readmore="Read the rest" 
+data-buttonclass="btn btn-primary" 
+data-offset="-100"></div>
+
+
 <!-- <embed src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing" width="800px" height="2100px" /> -->
 <!-- <a href="../pdfs/Year 1/Week 1_Everything Has Beauty.pdf">Week 1_Everything Has Beauty</a>
  -->
 <iframe
 src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/view?usp=sharing&embedded=true"
 style="width:718px; height:700px;" frameborder="0"></iframe> 
+
