--- a/_posts/Year 1/2020-04-13-Week-9.md
+++ b/_posts/Year 1/2020-04-13-Week-9.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 9-12::The Paradigm Shift
+title: Week 9-12 - The Paradigm Shift
 author: Mohammad Khan
 category: [Short Story]
 tags: [short story]
