--- a/_posts/Year 2/2021-07-19-Week-75.md
+++ b/_posts/Year 2/2021-07-19-Week-75.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 75- Future Reflections: The Lantern
+title: Week 75- Future Reflections- The Lantern
 author: Mohammad Khan
 category: [Memoir]
 tags: [memoir]
