--- a/_posts/Year 2/2021-04-12-Week-61.md
+++ b/_posts/Year 2/2021-04-12-Week-61.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 61-64:Archives
+title: Week 61-64 - Archives
 author: Mohammad Khan
 category: [short story]
 tags: [short story]
