--- a/_posts/Year 1/2020-09-21-Week-32.md
+++ b/_posts/Year 1/2020-09-21-Week-32.md
@@ -12,7 +12,7 @@ Creative Challenge:Take the first 4 lines of William Blake's Auguries of Innocen
 
 
 <p><a href="https://drive.google.com/file/d/1gBZCwkEXVYoTo_JV8-BPeC0zsWZysgf9/view?usp=sharing">
-Infinity in the Palm of your Hands.pdf</a></p>
+Eternity in an Hour.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
