embedding google docs files

--- a/_posts/Year 2/2021-07-26-Week-76.md
+++ b/_posts/Year 2/2021-07-26-Week-76.md
@@ -16,6 +16,7 @@ The Gray Ghost.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vQucd7V8ExZKgvN4cX9l-y3NPkGfw5Xd3iaOJPMJGEPslJS319WELyoW_6KapvMc2TRSx-ZYltHR5cb/pub?embedded=true"></iframe>
 <iframe
 src="https://drive.google.com/file/d/1-jsImk747P-AXiLiLxnNvvdXIDyMW5f_/view?usp=sharing&embedded=true"
 style="width:718px; height:700px;" frameborder="0"></iframe>
