--- a/_posts/Year 2/2021-05-31-Week-68.md
+++ b/_posts/Year 2/2021-05-31-Week-68.md
@@ -16,6 +16,7 @@ In the Dark.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vSN_pw4zkyJM0MmcY9LX972oRB8gL0ge8o-Mlvo632KlDs56QJyv1cqwqTP4FOogufqf1298PV4h9zj/pub?embedded=true"></iframe>
 <iframe
 src="https://drive.google.com/file/d/1PERo8jST-5YEARVusaBImOw4Kyba_Eqo/view?usp=sharing&embedded=true"
 style="width:718px; height:700px;" frameborder="0"></iframe>
