Added a few stories & embedded Karoshi

--- a/_posts/Year 2/2021-07-19-Week-75.md
+++ b/_posts/Year 2/2021-07-19-Week-75.md
@@ -3,13 +3,13 @@ layout: post
 title: Week 75- Future Reflections- The Lantern
 author: Mohammad Khan
 category: [Memoir]
-tags: [memoir]
+tags: [short story, memoir]
 ---
 A letter to your future self.
 
 
 <p><a href="hhttps://drive.google.com/file/d/1lg2NQN4zqDKiwSBUhmnIEwrrmD58SGYT/view?usp=sharing">
-Future Reflections-The Lanter.pdf</a></p>
+Future Reflections-The Lantern.pdf</a></p>
 
 
 Or view it below: 
