--- a/_posts/Year 2/2021-08-02-Week-77.md
+++ b/_posts/Year 2/2021-08-02-Week-77.md
@@ -15,6 +15,4 @@ Karoshi.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1mdzXiCAwc6Eh8ZlTLng51c6LfjRRZqy1/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1mdzXiCAwc6Eh8ZlTLng51c6LfjRRZqy1/preview" width="640" height="480" allow="autoplay"></iframe>
