embedded pdfs for all year 2 stories

--- a/_posts/Year 2/2021-03-15-Week-57.md
+++ b/_posts/Year 2/2021-03-15-Week-57.md
@@ -7,10 +7,6 @@ tags: [memoir]
 ---
 A look into Workaholism
 
-
-
-
-
 <p>Week 57: 03/15/2021:</p>
 - <p><a href="https://drive.google.com/file/d/1PZFtSaULZkI6V5yYf5XHw93_PZoGeZBp/view?usp=sharing">
 Bitter Work: Part 1.pdf</a></p>
@@ -32,6 +28,4 @@ Bitter Work complete story.pdf</a></p>
 
 Or view the compiled story below: 
 <!-- <embed src="https://drive.google.com/file/d/1INkRoI_oPlyxbBqTNUnG0mh4QYkuY025/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1INkRoI_oPlyxbBqTNUnG0mh4QYkuY025/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1INkRoI_oPlyxbBqTNUnG0mh4QYkuY025/preview" width="640" height="480" allow="autoplay"></iframe>
