--- a/_posts/Year 2/2021-06-07-Week-69.md
+++ b/_posts/Year 2/2021-06-07-Week-69.md
@@ -29,6 +29,4 @@ Accolades Complete Story.pdf</a></p>
 
 Or view the compiled story below: 
 <!-- <embed src="https://drive.google.com/file/d/1ICEiEsziE3TYqeHpnmsZYxw7O0DCZp4E/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1ZCOQHuhZAXKwSGGqzpPNFpqZ1PSXXVDr/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1ZCOQHuhZAXKwSGGqzpPNFpqZ1PSXXVDr/preview" width="640" height="480" allow="autoplay"></iframe>
