--- a/_posts/Year 2/2021-02-15-Week-53.md
+++ b/_posts/Year 2/2021-02-15-Week-53.md
@@ -5,8 +5,7 @@ author: Mohammad Khan
 category: [Short Story]
 tags: [short story]
 ---
-I don't know what to write for this one.
-
+...can't think of anything for this one.
 
 <p><a href="https://drive.google.com/file/d/1Dg7s-3ScxEDOnc9NGzVbfOxeCa8vxOyv/view?usp=sharing">
 Writer's Block.pdf</a></p>
@@ -14,6 +13,4 @@ Writer's Block.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1Dg7s-3ScxEDOnc9NGzVbfOxeCa8vxOyv/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1Dg7s-3ScxEDOnc9NGzVbfOxeCa8vxOyv/preview" width="640" height="480" allow="autoplay"></iframe>
