--- a/_posts/Year 2/2021-02-22-Week-54.md
+++ b/_posts/Year 2/2021-02-22-Week-54.md
@@ -13,6 +13,4 @@ The Transmogrification.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1QYriuGkGyzVizdT87LLIRaVUBOQhv11X/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1QYriuGkGyzVizdT87LLIRaVUBOQhv11X/preview" width="640" height="480" allow="autoplay"></iframe>
