--- a/_posts/Year 2/2021-03-08-Week-56.md
+++ b/_posts/Year 2/2021-03-08-Week-56.md
@@ -13,7 +13,4 @@ tags: [screenplay]
 Miles Gray.pdf</a>
 
 Or view it below: 
-<iframe
-src="https://drive.google.com/file/d/1KMgJTqy9vSR51rSF715qUl8Xs5TUhQbP/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe> 
-<!-- <embed src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing" width="800px" height="2100px" /> -->
+<iframe src="https://drive.google.com/file/d/1KMgJTqy9vSR51rSF715qUl8Xs5TUhQbP/preview" width="640" height="480" allow="autoplay"></iframe>
