--- a/_posts/Year 2/2021-05-17-Week-66.md
+++ b/_posts/Year 2/2021-05-17-Week-66.md
@@ -13,7 +13,4 @@ tags: [screenplay]
 Cessna 172 commercial.pdf</a>
 
 Or view it below: 
-<iframe
-src="https://drive.google.com/file/d/1TtY4mGWk0x6qIkGpHr1eNrMA7QUE9S_E/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe> 
-<!-- <embed src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing" width="800px" height="2100px" /> -->
+<iframe src="https://drive.google.com/file/d/1TtY4mGWk0x6qIkGpHr1eNrMA7QUE9S_E/preview" width="640" height="480" allow="autoplay"></iframe>
