--- a/_posts/Year 2/2021-05-24-Week-67.md
+++ b/_posts/Year 2/2021-05-24-Week-67.md
@@ -13,7 +13,4 @@ tags: [screenplay]
 Phantom Flight.pdf</a>
 
 Or view it below: 
-<iframe
-src="https://drive.google.com/file/d/1kM5kZnwAZ4TJblHRQ0Pa89lRcC7xiULv/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe> 
-<!-- <embed src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing" width="800px" height="2100px" /> -->
+<iframe src="https://drive.google.com/file/d/1kM5kZnwAZ4TJblHRQ0Pa89lRcC7xiULv/preview" width="640" height="480" allow="autoplay"></iframe>
